--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang='en'>
 	<head>
+		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<link rel='stylesheet' href='./styles.css'/>
 	</head>
 
 	<body>
-		<button id="residents">Get Residents</button>
-		<section></section>
+		<section>
+			<button class="residents">Get Residents</button>
+		</section>
+		
 		<script src="./node_modules/axios/dist/axios.min.js"></script>
 		<script src="main.js"></script>
 	</body>
